# forecast_solar

./: .flake8  .pre-commit-config.yaml  .yamllint  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  example.py  pyproject.toml  setup.py  test_forecast_solar.py
.github/: dependabot.yml  labels.yml  release-drafter.yml
.github/workflows/: additional-tags.yml  black.yml  labels.yml  linting.yaml  pr-labels.yaml  publishtopypi.yml  release-drafter.yaml  release-drafter.yml  release.yaml  sync-labels.yml  test.yaml  tests.yaml  typing.yaml
examples/: estimate.py  planes.py  ruff.toml
forecast_solar/: __init__.py  exceptions.py  forecast_solar.py  models.py
src/forecast_solar/: __init__.py  exceptions.py  forecast_solar.py  models.py
tests/: __init__.py  conftest.py  test_exceptions.py  test_forecast.py  test_models.py
tests/__snapshots__/: test_models.ambr
tests/fixtures/: forecast.json  forecast_personal.json  ratelimit.json  validate_key.json  validate_plane.json
