[tool.poetry]
name = "forecast-solar"
version = "0.0.0"
description = "Asynchronous Python client for getting forecast solar information"
authors = ["Klaas Schoute <hello@student-techlife.com>"]
maintainers = ["Klaas Schoute <hello@student-techlife.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/home-assistant-libs/forecast_solar"
repository = "https://github.com/home-assistant-libs/forecast_solar"
documentation = "https://github.com/home-assistant-libs/forecast_solar"
keywords = ["forecast", "solar", "power", "energy", "api", "async", "client"]
classifiers = [
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "forecast_solar", from = "src" },
]

[tool.poetry.dependencies]
aiohttp = ">=3.0.0"
aiodns = ">=3.0.0"
python = "^3.11"
yarl = ">=1.6.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/home-assistant-libs/forecast_solar/issues"
Changelog = "https://github.com/home-assistant-libs/forecast_solar/releases"

[tool.poetry.group.dev.dependencies]
aresponses = "3.0.0"
covdefaults = "2.3.0"
pytest = "8.1.1"
pytest-asyncio = "0.23.6"
pytest-cov = "5.0.0"
pytest-freezer = "0.4.8"
ruff = "0.4.2"
syrupy = "4.6.1"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["forecast_solar"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
lint.select = ["ALL"]
lint.ignore = [
  "ANN101",  # Self... explanatory
  "ANN102",  # cls... just as useless
  "ANN401",  # Opinioated warning on disallowing dynamically typed expressions
  "D203",    # Conflicts with other rules
  "D213",    # Conflicts with other rules
  "D417",    # False positives in some occasions
  "EM101",   # Allow exceptions with string literials
  "PLR2004", # Just annoying, not really useful
  "SLOT000", # Has a bug with enums: https://github.com/astral-sh/ruff/issues/5748
  "TRY003",  # Allow long message outside exception class

  # Conflicts with the Ruff formatter
  "COM812",
  "ISC001",
]

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = false
fixture-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["forecast_solar"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
