[project]
name = "forecast-solar"
version = "0.0.0"
description = "Asynchronous Python client for getting forecast solar information"
authors = [{ name="Klaas Schoute", email="<hello@student-techlife.com>"}]
maintainers = [{name="Klaas Schoute", email="<hello@student-techlife.com>"}]
license = "MIT"
requires-python = ">=3.11"
readme = "README.md"
keywords = ["forecast", "solar", "power", "energy", "api", "async", "client"]
classifiers = [
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["dependencies"]
packages = [
    { include = "forecast_solar", from = "src" },
]

[tool.poetry.dependencies]
aiohttp = ">=3.0.0"
python = "^3.11"
yarl = ">=1.6.0"

[project.urls]
homepage = "https://github.com/home-assistant-libs/forecast_solar"
repository = "https://github.com/home-assistant-libs/forecast_solar"
documentation = "https://github.com/home-assistant-libs/forecast_solar"
"Bug Tracker" = "https://github.com/home-assistant-libs/forecast_solar/issues"
Changelog = "https://github.com/home-assistant-libs/forecast_solar/releases"

[tool.poetry.group.dev.dependencies]
aresponses = "3.0.0"
covdefaults = "2.3.0"
mypy = "1.18.2"
pre-commit = "4.3.0"
pre-commit-hooks = "6.0.0"
pytest = "8.4.2"
pytest-asyncio = "1.2.0"
pytest-cov = "7.0.0"
pytest-freezer = "0.4.9"
ruff = "0.14.0"
syrupy = "5.0.0"
yamllint = "1.37.1"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["forecast_solar"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = "3.11"

# flake8-mypy expects the two following for sensible formatting
show_column_numbers = true

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
lint.select = ["ALL"]
lint.ignore = [
  "ANN401",  # Opinioated warning on disallowing dynamically typed expressions
  "D203",    # Conflicts with other rules
  "D213",    # Conflicts with other rules
  "D417",    # False positives in some occasions
  "EM101",   # Allow exceptions with string literials
  "PLR2004", # Just annoying, not really useful
  "SLOT000", # Has a bug with enums: https://github.com/astral-sh/ruff/issues/5748
  "TRY003",  # Allow long message outside exception class

  # Conflicts with the Ruff formatter
  "COM812",
]

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = false
fixture-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["forecast_solar"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
